tests/typing/fail/multi_assign_tuple1_fail1.rb

class A
  def __is_a() end
end

a = A.new

x, y = 1,a

x + 2
y + 3
